pyglet 1.4.7
Bugfix release

Bugfixes
--------
- Allow creation of non-power-of-two compressed Textures. (#78)


pyglet 1.4.6
Bugfix release

Bugfixes
--------
- Fix PNG encoder saving upside-down images due to incorrect pitch. (#83)
- pyglet.info shows more platform specific information.


pyglet 1.4.5
Bugfix and small improvement release

Bugfixes
--------
- Fix Allocator creating orphaned regions.
- Allow npot compressed texture loading.
- Fix MachOLibraryLoader failing on lib names containing extra "."s.

Improvements
------------
- Documentation has been rebased on the standard RTD theme.
- Other documentation clarifications and improvements.
- New `MouseStateHandler` convenience class.


pyglet 1.4.4
Bugfix release.

Bugfixes
--------
- Fixed incorrect glXSwapIntervalEXT arguments for Xlib contexts.


pyglet 1.4.3
Bugfix release.

Bugfixes
--------
- Fix crash due to inconsistent API when changing Label or HTMLLabel color. (#45)
- Add support for GLX_EXT_swap_control on Linux platforms.


pyglet 1.4.2
Bugfix and cleanup release.

Improvements
------------
- Removed broken projects from /contrib
- Update setup.py with project_urls and long_description.
- Added Window.get_pixel_ratio function for calculating scaling on HiDPI displays.
- Start some code quality improvements, such as whitespace removal, star imports, etc.

Bugfixes
--------
- Fix invalid argtype in image GDIplus decoder.
- Change sys.is_epydoc to sys.is_pyglet_doc_run to prevent crashing with Anaconda, etc. (#9)
- Prevent gl_info.get_version from crashing with blank version string. (#36)


pyglet 1.4.1
============
Bugfix release.

Bugfixes
--------
- #256 Fix aliases for Window.get_viewport_size/get_framebuffer_size.


pyglet 1.4.0
============
Major release adding several new features and removing some long deprecated methods and attributes.
There are also many small bugfixes, and documentation corrections. Thanks to everyone who submitted
a pull request or contributed towards this release!
